--- a/index.html
+++ b/index.html
@@ -162,6 +162,12 @@
                         alt="Icon:google-scholar"
                         class="svg_icons" />
                 </a>
+				<a href="https://www.researchgate.net/profile/Sokratis-Xenos">
+                    <img
+                        src="media/svg_logos/researchgate.svg"
+                        alt="Icon:researchgate"
+                        class="svg_icons" />
+                </a>
             </div>
         </main>
 
