--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <p></p>
                     <p>Hello there. I am Sokratis Xenos!</p>
                     <p>
-                        I am a Mechanical Engineering specializing in Computational Mechanics, focusing on Porous Metals, 
+                        I am a Mechanical Engineer specializing in Computational Mechanics, focusing on Porous Metals, 
 						Fracture & Coupled Problems. Applying analytical skills to innovate and solve intricate engineering 
 						challenges. Passionate about leveraging expertise for impactful solutions.
 
@@ -135,7 +135,7 @@
                 </p>
 
                 <p>
-                    My CV can be found here
+                    My CV can be found
                     <a href="docs/CV.pdf">here</a>.
                 </p>
             </div>
