--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <!--Based on filip-os.github.io repo-->
-    <!--Last edit Sep 2024-->
+    <!--Last edit Oct 2024-->
 
     <script src="js_functions/includeHTML.js"></script>
 
@@ -30,12 +30,12 @@
             <div class="Default_Header">
                 <nav>
                     <ul>
-                        <li><a href="index.html">/About</a></li>
-                        <li><a href="research.html">/Research</a></li>
-                        <li><a href="teaching.html">/Teaching</a></li>
-                        <li><a href="publications.html">/Publications</a></li>
-                        <li><a href="posts.html">/Posts</a></li>
-                        <li><a href="links.html">/Links</a></li>
+                        <li><a href="index.html">About</a></li>
+                        <li><a href="research.html">Research</a></li>
+                        <li><a href="teaching.html">Teaching</a></li>
+                        <li><a href="publications.html">Publications</a></li>
+                        <li><a href="posts.html">Posts</a></li>
+                        <li><a href="links.html">Links</a></li>
                     </ul>
                 </nav>
             </div>
@@ -125,13 +125,13 @@
                 <br />
                 <p>
                     Research interests and projects described in more detail in
-                    <a href="research.html">/Research</a>
+                    <a href="research.html">Research</a>
                     page.
                 </p>
 
                 <p>
                     My journal/conference/thesis publications, are available at
-                    <a href="publications.html">/Publications</a>.
+                    <a href="publications.html">Publications</a>.
                 </p>
 
                 <p>
