--- a/index.html
+++ b/index.html
@@ -187,18 +187,16 @@
     <!-- This is run when the page reloads (script)-->
     <script>
         const theme = localStorage.getItem("theme");
-        if (theme === "dark") {
-            document.documentElement.setAttribute("data-theme", "dark");
-            document.getElementById("btn_dark_mode").innerHTML = "/Light Mode";
-            document.getElementById("email_pic").src = "media/notanemailadress_dark.png";
-        }
+        document.documentElement.setAttribute("data-theme", "dark");
+        document.getElementById("btn_dark_mode").innerHTML = "/Light Mode";
+        document.getElementById("email_pic").src = "media/notanemailadress_dark.png";
     </script>
 
     <!-- Toggle dark mode function -->
     <!-- Blur Removes the focus from the button after click without affecting accessibility -->
     <!-- Change button string -->
     <!-- Change figure -->
-    <script>
+    <!--<script>
         function fun_mode_button_index() {
             document.activeElement.blur();
 
@@ -217,5 +215,5 @@
                     "media/notanemailadress_dark.png";
             }
         }
-    </script>
+    </script> -->
 </html>
