index.html update 06/06/25

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <br />
                     <h1>Welcome!</h1>
                     <p></p>
-                    <p>Hello there. I am Sokratis Xenos!</p>
+                    <p>Hello there. I am Sokratis Xenos and this is my personal website!</p>
                     <p>
                         I am a Mechanical Engineer specializing in Computational Mechanics, focusing on Porous Metals, 
 						Fracture & Coupled Problems. Applying analytical skills to innovate and solve intricate engineering 
