--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <!--Based on filip-os.github.io repo-->
-    <!--Last edit Oct 2024-->
+    <!--Last edit June 2025-->
 
     <script src="js_functions/includeHTML.js"></script>
 
@@ -30,12 +30,12 @@
             <div class="Default_Header">
                 <nav>
                     <ul>
-                        <li><a href="index.html">About</a></li>
-                        <li><a href="research.html">Research</a></li>
-                        <li><a href="teaching.html">Teaching</a></li>
-                        <li><a href="publications.html">Publications</a></li>
-                        <li><a href="posts.html">Posts</a></li>
-                        <li><a href="links.html">Links</a></li>
+                        <li><a href="index.html"><b>About</b></a></li>
+                        <li><a href="research.html"><b>Research</b></a></li>
+                        <li><a href="teaching.html"><b>Teaching</b></a></li>
+                        <li><a href="publications.html"><b>Publications</b></a></li>
+                        <li><a href="posts.html"><b>Posts</b></a></li>
+                        <li><a href="links.html"><b>Links</b></a></li>
                     </ul>
                 </nav>
             </div>
