--- a/publications.html
+++ b/publications.html
@@ -132,12 +132,12 @@
                 <h2 id="Theses"><u>Theses</u></h2>
                 <ul>
                     <li>
-                        [T1] <b>Xenos, S.</b>, 2024. “Porous materials: constitutive modeling 
+                        [T1] <b>Xenos, S.</b>, (2024). “Porous materials: constitutive modeling 
 						and computational issues.” Doctoral Dissertation. Ecole Polytechnique, 
 						Institute Polytechnique de Paris, France.
                     </li>
                     <li>
-                        [T2] <b>Xenos, S.</b>, 2018. “Computational Non-local Plasticity 
+                        [T2] <b>Xenos, S.</b>, (2018). “Computational Non-local Plasticity 
 						of Porous Metals.” Diploma Thesis. University of Thessaly, Greece.
                     </li>
                 </ul>
