Corrected a typo in Conferences

--- a/publications.html
+++ b/publications.html
@@ -115,7 +115,7 @@
                 <ul>
                     <li>
                         [C1] Haidemenopoulos G.N., <b> Xenos S.</b>, Kamoutsi H., Chaintini M., Rapti S.,
-						Zelenitsas K., Voudouris N., Tazedakis A., Papadioti1 I., Aravas N. (2025). Hydrogen-Induced 
+						Zelenitsas K., Voudouris N., Tazedakis A., Papadioti I., Aravas N. (2025). Hydrogen-Induced 
 						Cracking during SSRT in an X65M pipeline steel: Experiment and Simulation, 18th European
 						Congress and Exhibition on Advanced Materials and Processes (EUROMAT), September 14-18, 
 						Granada, Spain. [Poster Presentation].
